<resources>
    <string name="app_name">S3-Client</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="activity_login_init_phrase">Sign in or create a new account</string>
    <string name="passwords_mismatch">Passwords do not match</string>
    <string name="email_empty">Email is empty</string>
    <string name="invalid_email">Invalid Email format</string>
    <string name="empty_password">Password is empty</string>
    <string name="login_success">Successful login!</string>
    <string name="registration_success">Successful registration!</string>
    <string name="short_password">Password must be at least 12 characters</string>
    <string name="big_letter">Password must contain at least one uppercase letter</string>
    <string name="small_letter">Password must contain at least one lowercase letter</string>
    <string name="need_number">Password must contain at least one number</string>
    <string name="need_special_char">Password must contain at least one special character "! @ # $ % *"</string>
    <string name="buckets">Buckets</string>
    <string name="add_bucket">Add Bucket</string>
    <string name="bucket_icon">Bucket Icon</string>
    <string name="more_options">More</string>
    <string name="no_buckets">No Buckets</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="upload">Upload</string>
    <string name="create_folder">Create Folder</string>
    <string name="object_icon">Object Icon</string>
    <string name="bucket_name">Bucket Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="share_url">Share Url</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="move">Move</string>
    <string name="create_bucket">Create bucket</string>
    <string name="create">Create</string>
    <string name="name_required">Name is required</string>
    <string name="cancel">Cancel</string>
    <string name="delete_bucket">Delete Bucket</string>
    <string name="delete_bucket_confirm">Confirm Delete Bucket? %s</string>
    <string name="share_link">Share link</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="close">Close</string>
    <string name="delete_confirm">Confirm delete? %s</string>

</resources>